# mikrotik-opencode-workspace

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  MEMORY.md  README.md  opencode.json  pytest.ini  requirements.txt  run.sh
certs/: README.md
docs/: architecture.md  claude.local.example.json  implementation-phases.md  mcp-configuration.md  mcp-server-design.md  passwordless-startup.md  project-structure.md  testing.md
scripts/: reset-claude-docker-volumes.sh  reset-opencode-docker-volumes.sh  run-claude-isolated.sh  run-claude-shared.sh  run-opencode-isolated.sh  run-opencode-shared.sh
tools/mikrotik/: NOTICE  README.md  pyproject.toml
tools/mikrotik-mcp/: pyproject.toml
tools/mikrotik-mcp/reports/live-smoke/: 20260406T060904Z-192-168-16-1-read-only.json  20260406T060904Z-192-168-16-1-read-only.md  20260406T061417Z-192-168-16-1-read-only.json  README.md  (+1 more)
tools/mikrotik-mcp/scripts/: live_smoke_read_only.py
tools/mikrotik-mcp/src/: client.py  main.py  server.py
tools/mikrotik-mcp/tests/: conftest.py  test_client.py  test_downloads.py  test_server.py
tools/mikrotik/mikrotik_mcp/: __init__.py  app.py  client.py  downloads.py  filters.py  formatting.py  runtime.py  server.py  server_helpers.py
tools/mikrotik/mikrotik_mcp/tool_impls/: __init__.py  access.py  core.py  files.py  security.py
tools/mikrotik/reports/live-smoke/: README.md
tools/mikrotik/scripts/: live_smoke_read_only.py
tools/mikrotik/tests/: conftest.py  test_client.py  test_downloads.py  test_runtime.py  test_server.py
(+14 files in other folders)
